[gd_scene load_steps=3 format=2]

[ext_resource path="res://ActionLevels/LevelCreator/Enemies/StaticGunnerfly/StaticGunnerfly_logic.gd" type="Script" id=1]
[ext_resource path="res://ActionLevels/LevelCreator/Enemies/EnemyAssets/BulletDebugCanvas.tscn" type="PackedScene" id=2]

[node name="StaticGunnerfly_logic" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" parent="." instance=ExtResource( 2 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="value_changed" from="CanvasLayer/DebugSliders/VBoxContainer/RotationSpeedSlider" to="." method="_on_RotationSpeedSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/DebugSliders/VBoxContainer/SpawnCountSlider" to="." method="_on_SpawnCountSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/DebugSliders/VBoxContainer/FireRateSlider" to="." method="_on_FireRateSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/DebugSliders/VBoxContainer/RadiusSlider" to="." method="_on_RadiusSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/DebugSliders/VBoxContainer/ProjectileSpeedSlider" to="." method="_on_ProjectileSpeedSlider_value_changed"]

[editable path="CanvasLayer"]
